--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,22 @@
 {
   "name": "Ambuj Kumar Tripathi's AI Portfolio",
   "short_name": "Ambuj AI",
-  "start_url": "/Ambuj_AI_Portfolio/",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#0a0a1a",
   "theme_color": "#0073e6",
   "icons": [
     {
-      "src": "/Ambuj_AI_Portfolio/icons/icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "/Ambuj_AI_Portfolio/icons/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
