--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,8 @@
 {
-  "name": "Ambuj Kumar Tripathi's AI Portfolio",
+  "name": "Ambuj Kumar Tripathi",
   "short_name": "Ambuj AI",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#0a0a1a",
   "theme_color": "#0073e6",
@@ -10,13 +11,13 @@
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
